--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "dependencies": {
     "connect-busboy": "0.0.2",
     "connect-mongo": "^1.3.2",
+    "connect-multiparty": "^2.0.0",
     "express-session": "^1.14.0",
+    "fs-extra": "^0.30.0",
+    "grunt-mocha-test": "^0.12.7",
+    "multer": "^1.2.0",
     "node-uuid": "^1.4.7",
     "nodemon": "^1.10.0"
   },
@@ -32,6 +36,7 @@
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-nodemon": "^0.4.2"
+    "grunt-nodemon": "^0.4.2",
+    "jshint": "^2.9.3"
   }
 }
